Tue May  3 14:19:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_if_gen): set newline flag to NODE_IF to trace all
	  if/elsif statements.  [ruby-core:67720] [Bug #10763]

Tue May  3 05:35:54 2016  Eric Wong  <e@80x24.org>

	* process.c (disable_child_handler_fork_child):
	  initialize handler for SIGPIPE for !POSIX_SIGNAL

Mon May  2 23:03:42 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_utruncate): implements new
	  truncate alternative which accepts UTF-8 path.

	* file.c (truncate): use above function.
	  [Bug #12340]

Mon May  2 20:59:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (str_coderange): to avoid function call when the string already
	  has coderange information.

	* re.c (rb_reg_prepare_enc): add shortcut path when the regexp has
	  the same encoding of given string.

	* re.c (rb_reg_prepare_re): avoid duplicated allocation of
	  onig_errmsg_buffer.


Mon May  2 12:34:52 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_refinement.rb (test_inspect): Use Integer instead of
	  Fixnum.

Mon May  2 06:58:38 2016  Tanaka Akira  <akr@fsij.org>

	* complex.c: Don't refer rb_cFixnum and rb_cBignum.
	  (k_fixnum_p): Use FIXNUM_P.
	  (k_bignum_p): Use RB_TYPE_P.

Mon May  2 01:27:59 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_numeric.rb (test_step): Use Integer::FIXNUM_MAX.

Mon May  2 01:15:01 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_module.rb (test_name): Use Integer instead of Fixnum.

Mon May  2 01:00:04 2016  Tanaka Akira  <akr@fsij.org>

	* test/lib/test/unit/assertions.rb (assert_fixnum): Defined.
	  (assert_bignum): Defined.

	* test/ruby/test_bignum.rb: Use assert_bignum.

	* test/ruby/test_integer_comb.rb: Use assert_fixnum and assert_bignum.

	* test/ruby/test_optimization.rb: Ditto.

Mon May  2 00:41:53 2016  Tanaka Akira  <akr@fsij.org>

	* vm_trace.c (recalc_remove_ruby_vm_event_flags): Add a cast to
	  avoid signed integer overflow.
