@@ -1,3 +1,11 @@
+Tue May  3 22:10:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (count_utf8_lead_bytes_with_word): Use __builtin_popcount
+	  only if it can use SSE 4.2 POPCNT whose latency is 3 cycle.
+
+	* internal.h (rb_popcount64): use __builtin_popcountll because now
+	  it is in fast path.
+
 Tue May  3 14:19:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (new_if_gen): set newline flag to NODE_IF to trace all
